--- a/HowtoPush.html
+++ b/HowtoPush.html
@@ -3,12 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>HowToPushGitHub</title>
-    <style>
-        h1 {
-          text-align: center;
-        }
-    </style>
 </head>
 <body>
     <h1>
@@ -20,7 +16,7 @@ Git bash:
 
 1. Make sure you're in the right directory:
 
-pwd <-- Print Working Directory
+pwd -- Print Working Directory
 
 2. Make sure you configure your credentials
 
